--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -17,44 +18,86 @@
             <img class="logo" src="../img/logo.jpeg" alt=""></div>
             <h1 id="tit1">Construcciones Maldonado</h1>
             <h2 id="tit2">Arquitectura de Altura</h2>
-        <nav>
-                <ul class="menu">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="sobre nosotros.html">Sobre Nosotros</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="obras terminadas.html">Obras Terminadas</a></li>
-                    <li><a href="contactanos.html">Contactanos</a></li>
-                </ul>  
-        </nav>
+            <nav class=" menu navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./sobre nosotros.html">Sobre Nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./obras terminadas.html">Obras Terminadas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./contactanos.html">Contactanos</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
     </header>
     <main>
     <h3 id="titulo1">Servicios</h3>
-    <section class="serv">
-            <section id="planos">
-                <h4>Confecciones de Planos</h4>
-                <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
-                <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
-            </section> 
-            <section id="supervision">
-            <h4>Supervisión Tecnica</h4>
-            <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
-            <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="">
-        </section>
-        <section id="instalacionagua">
-            <h4>Instalaciones de Agua</h4>
-            <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
-            <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="">
-        </section>
-        <section id="instalaciongas">
-            <h4>Instalaciones de Gas</h4>
-            <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
-            <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="">
-        </section>
-        <section id="renderizados">
-            <h4>Renderizados</h4>
-            <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
-            <img class="imagenchica" src="../img/renderizado.jpeg" alt="">
-        </section>
+    <section class=" conteiner serv">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <h4 class="titulos">Confecciones de Planos</h4>
+          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <h4 class="titulos">Supervisión Tecnica</h4>
+          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="supervision">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <h4 class="titulos">Instalaciones de Agua</h4>
+          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="instalacionagua">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <h4 class="titulos">Instalaciones de Gas</h4>
+          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <h4 class="titulos">Renderizados</h4>
+          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+          <img class="imagenchica" src="../img/renderizado.jpeg" alt="renderizado">
+        </div>
+      </div>      
     </section>
         <div class="botonarriba"><a href="#arriba">Ir arriba</a></div>   
     </main>
@@ -77,5 +120,6 @@
             <p>Todos los derechos del sitio web estan reservados por Copyright. 2023</p>
         </section>
      </footer>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
