--- a/pages/obras terminadas.html
+++ b/pages/obras terminadas.html
@@ -55,8 +55,10 @@
         <section class="conteiner obras">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
-              <h4 class="titulos">Casa de 360 m3</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+              <h4 class="titulos">Casa Rivera 685</h4>
+              <p>Superficie: 350.00 m² | Año: 2020 - 2022 | Tipo: Vivienda Unifamiliar.</p> 
+              <p>En hormigón con detalles de lujo increíbles.</p> 
+              <p>Esta casa está ubicada en un terreno de 1200.00 metros cuadrados en Terralagos Country Club, un barrio que forma parte del corredor Sur de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada1.jpeg" alt="obraterminada1">
@@ -64,8 +66,10 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
-              <h4 class="titulos">Casa de 240 m3</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+              <h4 class="titulos">Casa Marquez 624</h4>
+              <p>Superficie: 265.00 m² | Año: 2019-2021 | Tipo: Vivienda Unifamiliar</p> 
+              <p>Construida en hormigón minimalista y elegante</p> 
+              <p>La casa, de 265.00 m², está ubicada en un lote triangular con frente noreste en un barrio cerrado de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada2.jpeg" alt="obraterminada2">
@@ -74,7 +78,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <h4 class="titulos">Pileta</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+              <p>De 9x3.50 con playa humada (Constitucion)</p> 
+              <p>Construida en hormigón minimalista y elegante.</p> 
+              <p>La Pileta, de 9x3.50ms, está ubicada en una casa ubicada en un terreno de 1000.00 metros cuadrados en un barrio cerrado en la zona noroeste de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada3.jpeg" alt="obraterminada3">
@@ -83,7 +89,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <h4 class="titulos">Duplex</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+              <p>Superficie: 290.00 m² | Año: 2020-2022 | Tipo: Vivienda Unifamiliar.</p> 
+              <p>Construida en hormigón con detalles de lujo increíbles.</p> 
+              <p>La casa está ubicada en un terreno de 220.00 metros cuadrados en Castelar, un barrio que forma parte del corredor Oeste del área metropolitana de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada4.jpeg" alt="obraterminada4">
@@ -92,7 +100,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <h4 class="titulos">Quincho</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+              <p>Alfaguias de 2x1.5 cada 0.50 cm</p> 
+              <p>Estructura en eucalipto natural.</p> 
+              <p>El Quincho, de 2x1.5 metros, está ubicado en un terreno de 220.00 metros cuadrados en Castelar, un barrio en zona centrica de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada5.jpeg" alt="obraterminada5">
