--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -54,47 +54,48 @@
     <h3 id="titulo1">Servicios</h3>
     <section class=" conteiner serv">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <h4 class="titulos">Confecciones de Planos</h4>
-          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+          <p class="servicios">Cada proyecto está diseñado especifica-mente para cumplir con los deseos y necesidades de cada cliente. Sin importar el tamaño del proyecto, nos adaptamos y trabajamos con la misma pasión en cada propuesta.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
-          <h4 class="titulos">Supervisión Tecnica</h4>
-          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+          <h4 class="titulos">Dirección de Obra</h4>
+          <p class="servicios">Seguimiento y verificación de procesos constructivos a través de libro de obra e informes periódicos, estudio y aprobación de certificados de pago.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="supervision">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <h4 class="titulos">Instalaciones de Agua</h4>
-          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+          <p class="servicios">Eliminamos obstrucciones en cañerías, baños, cloacas, cocinas y pluviales en la ciudad de Córdoba y alrededores. Utilizamos maquinaria que no daña la cañería.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+        <div> 
           <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="instalacionagua">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <h4 class="titulos">Instalaciones de Gas</h4>
-          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+          <p class="servicios">Para disfrutar de las mejores opciones de calefacción en casa ofrecemos una instalación de gas o de aerotermia. La instalación de gas se realiza tanto para gas natural, butano o propano, ya que este necesita ser canalizado hasta los aparatos que lo utilizan para funcionar.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
-          <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+        <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <h4 class="titulos">Renderizados</h4>
-          <p class="servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error repellendus consectetur nemo soluta atque impedit quam</p>
+          <p class="servicios">Es la creación de imágenes digitales, basadas en modelos o escenarios enteros tridimensionales o “3D”, creando así imágenes foto realistas, se genera a partir del cálculo de una gran cantidad de datos y elementos, realizado por complejos algoritmos, los cuales generan las escenas deseadas poniendo en escena cada elemento, como si se tratase de un rompecabezas.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 p-1">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <img class="imagenchica" src="../img/renderizado.jpeg" alt="renderizado">
         </div>
       </div>      
