--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -53,7 +53,10 @@
     <main>
         <section class="sobrenosotros">  
             <div><h3 id="somos">Sobre Nosotros</h3></div> 
-            <div id="aboutus"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut odit obcaecati deleniti! Incidunt qui illo perspiciatis eligendi nesciunt molestias sint rem, laboriosam non, odio officia, labore voluptatem iure? Iure, fugit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni quas, sint rerum quidem qui voluptate animi placeat possimus architecto sunt facere, reprehenderit, illum esse ab provident quibusdam. Non, at voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio doloremque ipsum quo at similique, minima, accusantium eum possimus hic quod fugiat labore perspiciatis quis impedit. Quod sint debitis rerum nesciunt!</p></div>
+            <div id="aboutus"><p>Velocidad y Realismo.</p></div> 
+            <div id="aboutus"><p>Así trabajamos hace tres años en Construcciones Maldonado y vamos por mas.</p></div>  
+            <div id="aboutus"><p>Somos diseñadores detallistas, buscadores de tendencias y por más trillado que suene, hacemos lo que hacemos con pasión.</p></div>
+            <div id="aboutus"><p>Nuestros clientes: Hoteles, desarrolladoras inmobiliarias, arquitectos, particulares con ganas de cambios, restaurantes, bares y oficinas entre otros.</p></div>
             <div><video src="./img/video.mp4" controls="controls" width="800"></video></div>
         </section>
         <div class="botonarriba"><a href="#arriba">Ir arriba</a></div>
