--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -57,7 +57,7 @@
             <div id="aboutus"><p>Así trabajamos hace tres años en Construcciones Maldonado y vamos por mas.</p></div>  
             <div id="aboutus"><p>Somos diseñadores detallistas, buscadores de tendencias y por más trillado que suene, hacemos lo que hacemos con pasión.</p></div>
             <div id="aboutus"><p>Nuestros clientes: Hoteles, desarrolladoras inmobiliarias, arquitectos, particulares con ganas de cambios, restaurantes, bares y oficinas entre otros.</p></div>
-            <div><video src="./img/video.mp4" controls="controls" width="800"></video></div>
+            <div><video src="../img/video.mp4" controls="controls" width="800"></video></div>
         </section>
         <div class="botonarriba"><a href="#arriba">Ir arriba</a></div>
     </main>
