--- a/pages/obras terminadas.html
+++ b/pages/obras terminadas.html
@@ -62,6 +62,8 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada1.jpeg" alt="obraterminada1">
+              <img class="imagenchica" src="../img/obraterminada1.jpeg" alt="obraterminada1">
+              <img class="imagenchica" src="../img/obraterminada1.jpeg" alt="obraterminada1">
             </div>
           </div>
           <div class="row">
@@ -72,6 +74,8 @@
               <p>La casa, de 265.00 m², está ubicada en un lote triangular con frente noreste en un barrio cerrado de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+              <img class="imagenchica" src="../img/obraterminada2.jpeg" alt="obraterminada2">
+              <img class="imagenchica" src="../img/obraterminada2.jpeg" alt="obraterminada2">
               <img class="imagenchica" src="../img/obraterminada2.jpeg" alt="obraterminada2">
             </div>
           </div> 
@@ -84,6 +88,8 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada3.jpeg" alt="obraterminada3">
+              <img class="imagenchica" src="../img/obraterminada3.jpeg" alt="obraterminada3">
+              <img class="imagenchica" src="../img/obraterminada3.jpeg" alt="obraterminada3">
             </div> 
           </div>   
           <div class="row">
@@ -95,6 +101,8 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
               <img class="imagenchica" src="../img/obraterminada4.jpeg" alt="obraterminada4">
+              <img class="imagenchica" src="../img/obraterminada4.jpeg" alt="obraterminada4">
+              <img class="imagenchica" src="../img/obraterminada4.jpeg" alt="obraterminada4">
             </div>
           </div>  
           <div class="row">
@@ -105,6 +113,8 @@
               <p>El Quincho, de 2x1.5 metros, está ubicado en un terreno de 220.00 metros cuadrados en Castelar, un barrio en zona centrica de la Ciudad de Córdoba.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+              <img class="imagenchica" src="../img/obraterminada5.jpeg" alt="obraterminada5">
+              <img class="imagenchica" src="../img/obraterminada5.jpeg" alt="obraterminada5">
               <img class="imagenchica" src="../img/obraterminada5.jpeg" alt="obraterminada5">
             </div>
           </div>
