--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -60,6 +60,8 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
           <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
+          <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
+          <img class="imagenchica" src="../img/planos.jpeg" alt="planos">
         </div>
       </div>
       <div class="row">
@@ -68,6 +70,8 @@
           <p class="servicios">Seguimiento y verificación de procesos constructivos a través de libro de obra e informes periódicos, estudio y aprobación de certificados de pago.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+          <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="supervision">
+          <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="supervision">
           <img class="imagenchica" src="../img/obraterminada6.jpeg" alt="supervision">
         </div>
       </div>
@@ -79,6 +83,8 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
         <div> 
           <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="instalacionagua">
+          <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="instalacionagua">
+          <img class="imagenchica" src="../img/instalacionagua.jpeg" alt="instalacionagua">
         </div>
       </div>
       <div class="row">
@@ -88,6 +94,8 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
         <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
+        <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
+        <img class="imagenchica" src="../img/instalaciongas.jpeg" alt="instalaciongas">
         </div>
       </div>
       <div class="row">
@@ -96,6 +104,8 @@
           <p class="servicios">Es la creación de imágenes digitales, basadas en modelos o escenarios enteros tridimensionales o “3D”, creando así imágenes foto realistas, se genera a partir del cálculo de una gran cantidad de datos y elementos, realizado por complejos algoritmos, los cuales generan las escenas deseadas poniendo en escena cada elemento, como si se tratase de un rompecabezas.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-1">
+          <img class="imagenchica" src="../img/renderizado.jpeg" alt="renderizado">
+          <img class="imagenchica" src="../img/renderizado.jpeg" alt="renderizado">
           <img class="imagenchica" src="../img/renderizado.jpeg" alt="renderizado">
         </div>
       </div>      
